correction CMakeLists.txt and modif dcs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ if(QTANALYSE MATCHES "on")
 endif()
 
 if(QTDCS MATCHES "on") 
-	add_subdirectory(../Dcs "${CMAKE_CURRENT_BINARY_DIR}/QtDcs")
+	add_subdirectory(Dcs "${CMAKE_CURRENT_BINARY_DIR}/QtDcs")
 	message(INFO ${Blue} " Add QtDcs" ${White})
 endif()
 
